assets/css/style.css
@font-face {
    font-family: 'outfit';
    src: url('/assets/fonts/Outfit-VariableFont_wght.ttf');
}

@keyframes bg-pan {
    from {
        background-position: 0% center;
    }

    to {
        background-position: -200% center;
    }
}

@keyframes fade-in {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@keyframes fade-in-triangle {
    0% {
        opacity: 0;
    }

    70% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@keyframes jump-triangle {
    20% {
        transform: translateY(0px) translateX(-50%);
    }

    50% {
        transform: translateY(-20px) translateX(-50%);
    }

    80% {
        transform: translateY(0px) translateX(-50%);

    }
}

html {
    scroll-behavior: smooth;
}

body {
    margin: 0px;
    padding: 0px;
    background-color: rgb(24, 26, 26);
}

.title-section::before {
    filter: blur(10px);
    position: fixed;
    content: 'zauy';
    color: #00000000;
    font-family: 'outfit';
    background: linear-gradient(to right,
            rgb(241, 159, 241), rgb(131, 65, 179), rgb(241, 159, 241));
    background-clip: text;
    white-space: nowrap;
    animation: bg-pan 3s linear infinite;
    background-size: 200%;
    font-size: 200px;
    font-weight: bold;

}

.title-link {
    text-decoration: none;
}

.title-section {
    animation: fade-in 1.98s cubic-bezier(0.56, 0.44, 0.29, 1);
    transition: top 0.5s ease;
}

.title-text {
    position: fixed;
    font-size: 200px;
    animation: fade-in 1.98s cubic-bezier(0.56, 0.44, 0.29, 1);
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    color: white;
    font-family: 'outfit';
    z-index: 2;
    margin-top: 0px;
}

.title-rainbow {
    position: relative;
    color: #00000000;
    background: linear-gradient(to right,
            rgb(241, 159, 241), rgb(131, 65, 179), rgb(241, 159, 241));
    background-size: 200%;
    background-clip: text;
    white-space: nowrap;
    animation: bg-pan 3s linear infinite;
    font-family: 'outfit';

}

#scroll-triangle {
    animation: fade-in-triangle 10s cubic-bezier(0.56, 0.44, 0.29, 1), jump-triangle 4s ease-in-out infinite;
    transition: 0.8s;
    left: 50%;
    bottom: 40px;
    width: 0;
    height: 0;
    position: fixed;
    border-left: 25px solid transparent;
    border-right: 25px solid transparent;
    border-top: 25px solid gray;
    transform: translateX(-50%);
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

#triangle-container {

    position: fixed;
    align-items: center;
    width: 100vw;
    height: 120px;
    bottom: 0;
}

